feat: compile to file .deb